# rust-git

./: Cargo.toml
src/: errors.rs  lib.rs  main.rs
src/cmd/: catfile.rs  mod.rs
src/fs/: checksum.rs  content_reader.rs  delta.rs  locator.rs  loose_file.rs  mod.rs  pack_file.rs  pack_idx.rs
src/model/: blob.rs  commit.rs  id.rs  mod.rs  object.rs  repository.rs  tag.rs  tree.rs
tests/: repository_test.rs
tests/packfiles/: pack-1dba36995240d4e37eb9c1aae367accc94169fc4.idx  pack-1dba36995240d4e37eb9c1aae367accc94169fc4.pack
