[package]
name = "rust-git"
version = "0.1.0"
authors = ["spacedragon <allendragon@gmail.com>"]
edition = "2018"

[lib]
name = "rust_git"
path = "src/lib.rs"

[[bin]]
name = "git"
path = "src/main.rs"

[dependencies]
structopt = "0.2.18"
os-str-generic = "0.2.0"
error-chain = "0.12.1"
nom = "5.0.0"
memmap = "0.7.0"
hex = "0.3.2"
flate2 = "1.0.9"
chrono = "0.4.7"
